--- a/Beki.html
+++ b/Beki.html
@@ -8,6 +8,6 @@
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-black flex flex-col justify-center h-svh w-screen">
- <img src="/images/developer.jpg" class="w-screen">
+ <img src="images/developer.jpg" class="w-screen">
 </body>
 </html>
