--- a/girma.html
+++ b/girma.html
@@ -8,6 +8,6 @@
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-black flex flex-col justify-center h-svh w-screen bg-white">
- <img src="/images/Girma.png" class="w-screen">
+ <img src="images/Girma.png" class="w-screen">
 </body>
 </html>
