--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     
     <div class="flex flex-col justify-center items-center">
       
-<a href="/views/girma.html">
+<a href="girma.html">
       <img src="images/girma-footer1.png" class="w-24 rounded-full md:rounded-none bg-white mb-4">
 </a>
 
@@ -336,7 +336,7 @@
   <!-- Right Column -->
   <div class="md:flex-1 h-64 mt-10 md:mt-20 rounded-3xl flex border-l-4 border-indigo-700 flex-row bg-indigo-50">
 <div class="flex flex-col justify-center h-full">
-<a target="_blank" href="/views/Beki.html">
+<a href="Beki.html">
  <img src="images/developer.jpg" class="rounded-full w-24 h-24 object-cover">
 </a>
 
